opam-version: "2.0"
name: "imandra-reason-parser"
version: "0.2"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
build: [
  ["dune" "build" "@install" "-p" name]
]
depends: [
  "dune" {build}
  "menhir"
  "ocaml-migrate-parsetree"
  "ocaml-compiler-libs"
  "uchar"
  "easy-format"
]
homepage: "https://github.com/aestheticintegration/imandra-reason-parser"
bug-reports: "https://github.com/aestheticintegration/imandra-reason-parser/issues"
dev-repo: "git+https://github.com/aestheticintegration/imandra-reason-parser.git"
synopsis: "Adaptation of Reason's parser for Imandra"
