opam-version: "2.0"
name: "imandra-reason-parser"
version: "0.4-ai"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
build: [
  ["dune" "build" "@install" "-p" name]
]
depends: [
  "ocaml"         {>= "4.02" & < "4.13"}
  "dune"          {>= "1.4"}
  "ocamlfind"     {build}
  "menhir"        {>= "20170418"}
  "merlin-extend" {>= "0.6"}
  "fix"
  "result"
  "ocaml-migrate-parsetree" {< "2.0.0"}
  "reason" { = version }
]
homepage: "https://github.com/aestheticintegration/imandra-reason-parser"
bug-reports: "https://github.com/aestheticintegration/imandra-reason-parser/issues"
dev-repo: "git+https://github.com/aestheticintegration/imandra-reason-parser.git"
synopsis: "Adaptation of Reason's parser for Imandra"
