(library
 (name reason_migrate_parsetree)
 (public_name reason.ocaml-migrate-parsetree)
 ; Changed for reason to avoid conflicting modules at link time between
 ; omp and reason itself.
 (wrapped true)
 ; (wrapped
  ; (transition "Access modules via the Migrate_parsetree toplevel module"))
 (libraries compiler-libs.common result ppx_derivers)
 (modules :standard)
 (preprocess (action (run %{exe:../tools/pp.exe} %{read:ast-version} %{input-file})))
 ; (ppx.driver
 ;  (main       Migrate_parsetree.Driver.run_main)
 ;  (flags      --dump-ast)
 ;  (lint_flags --null))
 )

(rule
 (targets ast-version)
 (action  (run %{ocaml} %{dep:config/gen.ml} %{ocaml_version})))

(cinaps
 (files *.ml *.mli)
 (libraries cinaps_helpers))
